Fix date badge alignment in Education section, swap USC logo
Date badges were overflowing their fixed-width box; now sized to
content and centered. USC logo swapped for the seal-style crest.

--- a/css/style.css
+++ b/css/style.css
@@ -462,7 +462,7 @@ main {
 }
 
 .edu-logo-col {
-  width: 120px;
+  width: 140px;
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
@@ -482,9 +482,8 @@ main {
 }
 
 .edu-date {
-  width: 100%;
-  text-align: center;
-  box-sizing: border-box;
+  white-space: nowrap;
+  font-size: 10.5px;
 }
 
 .edu-info {
